Fixed overflow issue caused by large numbers

--- a/styles.css
+++ b/styles.css
@@ -36,10 +36,10 @@ h2 {
     align-items: center;
     flex-direction: column;
     margin-top: 50px;
-    border: solid 2px black;
+    border: solid 4px #f7df1e;
     border-radius: 40px;
-    width:550px;
-    height: 650px;
+    width: 500px;
+    height: 600px;
     background-color: rgb(0, 76, 139);
     color: #f7df1e;
 }
@@ -48,6 +48,7 @@ h2 {
 #display {
     display: flex;
     justify-content: flex-end;
+    overflow: hidden;
     border: solid 4px #f7df1e;
     border-radius: 10px;
     width: 475px;
